# Malxplain

./: .replit  README.md  best_model.pkl  create_samples.py  create_test_samples.py  main.py  pyproject.toml  requirements.txt  train_models.py
attached_assets/: Pasted--Acceptance-Criteria-Structure-Install-requirements-t-1_1765394557029.txt
modules/: __init__.py  dynamic_analysis.py  educational_interface.py  feature_engineering.py  ml_models.py  prediction_engine.py  static_analysis.py
samples/: README.md
samples/malicious/: advanced_persistent_threat.json  banking_trojan.json
templates/: analysis.html  explanation.html  index.html  simple.html
test_samples/: README.md
tests/: __init__.py  test_dynamic_analysis.py  test_prediction.py  test_static_analysis.py
